# gcontinuity

./: Cargo.toml  README.md  errorstofix.txt
.cargo/: config.toml
assets/systemd/: gcontinuity.service
gcontinuity-common/: Cargo.toml
gcontinuity-common/src/: device.rs  error.rs  lib.rs  packet.rs
gcontinuity-daemon/: Cargo.toml
gcontinuity-daemon/src/: config.rs  lib.rs  main.rs  tls.rs
gcontinuity-daemon/src/dbus/: mod.rs  transport_iface.rs
gcontinuity-daemon/src/identity/: mod.rs
gcontinuity-daemon/src/keepalive/: mod.rs
gcontinuity-daemon/src/mdns/: mod.rs
gcontinuity-daemon/src/network/: mod.rs
gcontinuity-daemon/src/pairing/: mod.rs
gcontinuity-daemon/src/server/: connection.rs  mod.rs
gcontinuity-daemon/src/store/: mod.rs
gcontinuity-daemon/src/transport/: mod.rs  packet.rs  peer.rs  websocket_server.rs
gcontinuity-daemon/src/transport/webrtc/: data_channel.rs  media_track.rs  mod.rs  peer_connection.rs
gcontinuity-daemon/tests/: transport_integration.rs
gcontinuity-gtk/: Cargo.toml
gcontinuity-gtk/src/: app.rs  main.rs
gcontinuity-gtk/src/dbus/: mod.rs
gcontinuity-gtk/src/pages/: connection.rs
gcontinuity-gtk/src/ui/: devices_page.rs  mod.rs  pairing_dialog.rs  this_device_page.rs  window.rs
gcontinuity-shell-ext/: extension.js  metadata.json
